# video-chatbot

./: .env.local.template  .eslintignore  .eslintrc.json  README.md  next-patch.js  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
_templates/component/new/: Component.tsx.ejs.t  index.ts.ejs.t
backend/: pyproject.toml
backend/src/: agent.py  main.py
frontend/: .eslintignore  .eslintrc.json  next.config.js  package.json  tsconfig.json
frontend/.storybook/: main.js
frontend/_templates/component/new/: Component.stories.tsx.ejs.t  index.js
frontend/public/: output.vtt
frontend/src/components/layout/: index.tsx
frontend/src/hooks/: useDownloadUrl.ts  useMutateAuth.ts
frontend/src/lib/: supabase.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/stores/: chatStore.ts  supabaseStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: customSupabase.ts  index.ts  openai.ts  supabase.ts
frontend/src/utils/: convertToVTT.ts  openaiStream.ts  segmentsToVTT.ts  supabase.ts
public/: ,output.vtt  output.vtt  sample.vtt
src/: middleware.ts
src/defer/: chat.ts  generate-embeddings.ts  generate-title.ts  summarize-to-chapter.ts  vector-search.ts  wisper.ts
src/features/chatbot/: index.ts
src/features/profile/: index.tsx
src/lib/: apicall.ts  ffmpeg.ts  supabase.ts
src/pages/: _app.tsx  index.tsx
src/pages/api/: [id].ts
src/pages/c/: [id].tsx
src/stores/: chatStore.ts
src/types/: customSupabase.ts
src/utils/: compressSegments.ts  videoToAudio.ts  vttToSegments.ts
supabase/: config.toml
(+93 files in other folders)
