[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["daichan132 <wakadai0319@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
websockets = "^11.0.2"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
langchain = "^0.0.158"
openai = "^0.27.6"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
